added Perfect Place section and made responsive

--- a/index.html
+++ b/index.html
@@ -76,6 +76,21 @@
                 <img src="./Images/Rectangle 4.png" alt="mountain">
             </div>
         </section>
+
+        <section class="perfect-place">
+            <div class="perfectplace-details">
+                <h2 class="perfect-place-title">A Simple Perfect Place <br> To Get Lost</h2>
+                <p><small>Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis.</small></p>
+                <ul>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.</li>
+                </ul>
+                <button class="btn-primary">See more</button>
+            </div>
+            <div class="perfectplace-media">
+                <video controls src="./Images/Bangladesh Mountain.webm"></video>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
