newsletter section has been added and made responsive

--- a/index.html
+++ b/index.html
@@ -91,6 +91,24 @@
                 <video controls src="./Images/Bangladesh Mountain.webm"></video>
             </div>
         </section>
+        <section class="newsletter">
+            <div class="newsletter-details">
+                <h3>Newsletter</h3>
+                <p>Get your daily dose of travel news & tips. Sign up today!</p>
+                <form action="">
+                    <input type="text" name="" id="" placeholder="Enter your name">
+                    <input type="email" name="" id="" placeholder="Enter your email">
+                    <button class="btn-primary">Subscribe</button>
+                </form>
+            </div>
+            <div class="newsletter-img">
+                <img src="./Images/Rectangle 8 (1).png" alt="">
+                <div class="discount">
+                    <h5 class="discount-title">Travel.com</h5>
+                    <h2 class="discount-title2">Save up to 70%</h2>
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
