service section has been added and made responsive

--- a/index.html
+++ b/index.html
@@ -76,7 +76,33 @@
                 <img src="./Images/Rectangle 4.png" alt="mountain">
             </div>
         </section>
-
+        <section class="services">
+            <div class="service-details">
+                <h2 class="service-title">Why Choose Us</h2>
+                <p class="service-info">
+                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+                </p>
+            </div>
+            <div class="service-cards">
+                <div class="card card1">
+                    <div class="child-card child-card1">
+                        <img src="./Images/hotel.png" alt="hotel">
+                        <h4 class="card-title">Handpicked Hotels</h4>
+                        <p class="card-info">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                    <div class="child-card child-card2">
+                        <img src="./Images/maplogo.png" alt="hotel">
+                        <h4 class="card-title">World Class Service</h4>
+                        <p class="card-info">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                    </div>
+                </div>
+                <div class="card card2">
+                        <img src="./Images/gurantee.avif" alt="hotel">
+                        <h4 class="card-title">Best Price Guarantee</h4>
+                        <p class="card-info">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+                </div>
+            </div>
+        </section>
         <section class="perfect-place">
             <div class="perfectplace-details">
                 <h2 class="perfect-place-title">A Simple Perfect Place <br> To Get Lost</h2>
