collage section has been added and made responsive

--- a/index.html
+++ b/index.html
@@ -76,6 +76,43 @@
                 <img src="./Images/Rectangle 4.png" alt="mountain">
             </div>
         </section>
+        <section class="image-collage">
+            <div class="collage-details">
+                <h2 class="collage-title">Choose Your Destination</h2>
+                <p class="collage-info">
+                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+                </p>
+            </div>
+            <div class="collage-container">
+                <div class="firstrow row">
+                    <div class="child-row firstimg">
+                        <h2>Maldives</h2>
+                    </div>
+                    <div class="child-row secondimg">
+                        <h2>Indonesia</h2>
+                    </div>
+                </div>
+                <div class="second-row row">
+                    <div class="child-row thirdimg">
+                        <h2>Srilanka</h2>
+                    </div>
+                    <div class="child-row fourthimg">
+                        <h2>North America</h2>
+                    </div>
+                    <div class="child-row fifthimg">
+                        <h2>Kashmir</h2>
+                    </div>
+                </div>
+                <div class="thirdrow row">
+                    <div class="child-row sixthimg">
+                        <h2>Bangladesh</h2>
+                    </div>
+                    <div class="child-row seventhimg">
+                        <h2>Bandarban</h2>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="services">
             <div class="service-details">
                 <h2 class="service-title">Why Choose Us</h2>
