footer section added and made responsive

--- a/index.html
+++ b/index.html
@@ -173,6 +173,26 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <section class="footer">
+            <div class="footer-details">
+                <div class="nav-logo">
+                    <img src="./Images/Group 40071 (2).png" alt="logo">
+                    <h3>ADM <span style="color: #FF5400;">Travel</span></h3>
+                </div>
+                <p class="footer-info"><small>Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti vulputate. 
+                    Leo erat maecenas vitae elementum ultricies nullam.</small>
+                </p>
+                <div class="icons">
+                    <i class="fab fa-twitter"></i>
+                    <i class="fab fa-facebook-f"></i>
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-github"></i>
+                </div>
+                <hr style="color: rgb(255, 255, 255);">
+                <p class="footer-info"><small>2017, All Rights Reserved.</small>
+            </div>
+        </section>
+    </footer>
 </body>
 </html>
