collapsed navbar section

--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
                     <li><a href="">Contact</a></li>
                 </ul>
             </div>
+            <!-- Hamburger icon for mobile -->
+            <div class="hamburger-icon" id="hamburger-icon">
+                <i class="fas fa-bars"></i>
+            </div>
         </section>
         <section class="banner">
             <h1 class="banner-title">Explore Your Travel</h1>
