deals and discount section has been added and made responsive

--- a/index.html
+++ b/index.html
@@ -144,6 +144,47 @@
                 </div>
             </div>
         </section>
+        <section class="deals-discount">
+            <div class="deals-details">
+                <h2 class="deals-title">Deals & Discounts</h2>
+                <p class="deals-info">
+                    Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa. <br> Sodales dictumst nec nibh pellentesque.
+                </p>
+            </div>
+            <div class="deals-container">
+                <div class="row firstrow">
+                    <div class="child-container child-row-1">
+                        <i class="fas fa-clock"><small>7 Day / 6 Night</small></i> <i class="fas fa-users"><small>Max : 10</small></i><i class="fas fa-map-marker-alt"><small>Malaysia</small></i>
+                        <h2 class="deals-card-title">Tour To Satorini</h2>
+                        <p class="deals-card-description">Amet consectetur. Vulputate commodo felis 
+                           molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price">Price: $1300-$1500</p>
+                        <button class="btn-primary btn-primary2">Book Now</button>
+                    </div>
+                </div>
+                <div class="row secondrow">
+                    <div class="child-container">
+                        <i class="fas fa-clock"><small>7 Day / 6 Night</small></i> <i class="fas fa-users"><small>Max : 10</small></i><i class="fas fa-map-marker-alt"><small>Malaysia</small></i>
+                        <h2 class="deals-card-title">Tour To Satorini</h2>
+                        <p class="deals-card-description">Amet consectetur. Vulputate commodo felis 
+                           molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price">Price: $1300-$1500</p>
+                        <button class="btn-primary btn-primary2">Book Now</button>
+                    </div>
+                </div>
+                <div class="row thirdrow">
+                    <div class="child-container">
+                        <i class="fas fa-clock"><small>7 Day / 6 Night</small></i> <i class="fas fa-users"><small>Max : 10</small></i><i class="fas fa-map-marker-alt"><small>Malaysia</small></i>
+                        <h2 class="deals-card-title">Tour To Satorini</h2>
+                        <p class="deals-card-description">Amet consectetur. Vulputate commodo felis 
+                           molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing.</p>
+                        <p class="price">Price: $1300-$1500</p>
+                        <button class="btn-primary btn-primary2">Book Now</button>
+                    </div>
+                </div>
+            </div>
+            <button class="btn-primary btn-primary3">See All Packages</button>
+        </section>
         <section class="perfect-place">
             <div class="perfectplace-details">
                 <h2 class="perfect-place-title">A Simple Perfect Place <br> To Get Lost</h2>
